--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_orange"> #FE7833</color>
+    <color name="primary_dark_green_background"> #243837</color>
+    <color name="secondary_green_background">#2f403f</color>
 </resources>
