--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,27 +24,34 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/app_icon"
         android:layout_centerHorizontal="true"
+        android:textColorHint="@color/white"
         android:layout_marginTop="60dp"
         android:text="@string/welcome"
         android:textSize="40sp"
         android:fontFamily="@font/robotocondensedvariablefontwght"
         android:textColor="@color/white" />
 
-    <!-- Username Field -->
+    <!-- Email Field -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/username_layout"
+        android:id="@+id/email_layout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/auth_TITLE_welcome"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:textColorHint="@color/white">
+        app:boxStrokeColor="@color/white"
+        app:hintTextColor="@color/white"
+        android:textColorHint="@color/white"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/login_TEXTINPUT_username"
+            android:id="@+id/login_TEXTINPUT_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textCursorDrawable="@null"
             android:hint="@string/username"
+            android:textColorHint="@color/white"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -52,15 +60,21 @@
         android:id="@+id/password_layout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/username_layout"
+        android:layout_below="@id/email_layout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textColorHint="@color/white">
+        app:boxStrokeColor="@color/white"
+        app:hintTextColor="@color/white"
+        android:textColorHint="@color/white"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_TEXTINPUT_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textCursorDrawable="@null"
+            android:textColorHint="@color/white"
             android:hint="@string/password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -77,7 +91,7 @@
         android:text="@string/login"
         android:textColor="@color/white" />
 
-    <!-- Sign Up TextView -->
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/login_TEXTVIEW_signup"
         android:layout_width="wrap_content"
@@ -85,9 +99,72 @@
         android:layout_below="@id/login_BTN"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:text="Don't have an account? Sign Up"
+        android:text="@string/don_t_have_an_account_sign_up"
         android:textColor="@color/white"
-        android:textStyle="italic"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:padding="8dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:textStyle="italic"/>
+
+    <!-- Authentication Options -->
+    <LinearLayout
+        android:id="@+id/auth_options_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/login_TEXTVIEW_signup"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <!-- Google Icon -->
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/google_BTN"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:clickable="true"
+            android:background="?attr/selectableItemBackground"
+            android:focusable="true"
+            android:src="@drawable/ic_google" />
+
+        <!-- Microsoft Icon -->
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/microsoft_BTN"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_microsoft" />
+
+        <!-- Facebook Icon -->
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/facebook_BTN"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_facebook"
+            />
+
+    </LinearLayout>
+
+    <!-- Guest Entry Button -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/guest_entry_BTN"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/login_TEXTVIEW_signup"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:backgroundTint="@color/white"
+        android:text="@string/enter_as_guest"
+        android:textColor="@color/primary_dark_green_background"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
+
+
 
 </RelativeLayout>
