--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark_green_background"
     tools:context=".Activities.Authentication.SignUpActivity">
 
-    <!-- App Icon -->
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/app_icon"
         android:layout_width="130dp"
@@ -16,7 +16,6 @@
         android:layout_marginTop="60dp"
         android:src="@drawable/ic_pickcourt_foreground" />
 
-    <!-- Welcome Text -->
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/singup_TITLE"
         android:layout_width="wrap_content"
@@ -29,55 +28,52 @@
         android:fontFamily="@font/robotocondensedvariablefontwght"
         android:textColor="@color/white" />
 
-    <!-- Username Field -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/username_layout"
+        android:id="@+id/email_layout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/singup_TITLE"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:textColorHint="@color/white">
+        app:boxStrokeColor="@color/white"
+        app:hintTextColor="@color/white"
+        android:textColorHint="@color/white"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/signup_TEXTINPUT_username"
+            android:id="@+id/signup_TEXTINPUT_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/username"
-            android:inputType="text" />
+            android:textColor="@color/white"
+            android:textCursorDrawable="@null"
+            android:textColorHint="@color/white"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Password Field -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_layout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/username_layout"
+        android:layout_below="@id/email_layout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textColorHint="@color/white">
+        app:boxStrokeColor="@color/white"
+        app:hintTextColor="@color/white"
+        android:textColorHint="@color/white"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/signup_TEXTINPUT_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textCursorDrawable="@null"
             android:hint="@string/password"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/signup_TEXTVIEW_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/signup_BTN"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="Already have an account? Log In"
-        android:textColor="@color/white"
-        android:textStyle="italic"
-        android:textSize="16sp"/>
-
-    <!-- Sign Up Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signup_BTN"
         android:layout_width="300dp"
@@ -88,5 +84,22 @@
         android:backgroundTint="@color/primary_orange"
         android:text="@string/sign_up"
         android:textColor="@color/white" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/signup_TEXTVIEW_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/signup_BTN"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="@string/already_have_an_account_log_in"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:padding="8dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:textStyle="italic"/>
+
 
 </RelativeLayout>
