added drawer menu.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,8 +41,7 @@
         android:layout_marginTop="20dp"
         app:boxStrokeColor="@color/white"
         app:hintTextColor="@color/white"
-        android:textColorHint="@color/white"
-        >
+        android:textColorHint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_TEXTINPUT_email"
@@ -65,8 +64,7 @@
         android:layout_marginTop="10dp"
         app:boxStrokeColor="@color/white"
         app:hintTextColor="@color/white"
-        android:textColorHint="@color/white"
-        >
+        android:textColorHint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_TEXTINPUT_password"
@@ -79,18 +77,35 @@
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Forgot Password Text -->
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/login_TEXTVIEW_forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/password_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:text="@string/forgot_password_click_to_reset"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:padding="13dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:textStyle="italic"/>
+
     <!-- Login Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_BTN"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/password_layout"
+        android:layout_below="@id/login_TEXTVIEW_forgot_password"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:backgroundTint="@color/primary_orange"
         android:text="@string/login"
+        android:textSize="18sp"
         android:textColor="@color/white" />
-
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/login_TEXTVIEW_signup"
@@ -102,7 +117,7 @@
         android:text="@string/don_t_have_an_account_sign_up"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:padding="8dp"
+        android:padding="13dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
@@ -115,7 +130,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/login_TEXTVIEW_signup"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <!-- Google Icon -->
@@ -126,29 +141,10 @@
             android:clickable="true"
             android:background="?attr/selectableItemBackground"
             android:focusable="true"
-            android:src="@drawable/ic_google" />
+            android:src="@drawable/ic_google"
+            android:contentDescription="@string/google_button_sign_in" />
 
-        <!-- Microsoft Icon -->
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/microsoft_BTN"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
 
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_microsoft" />
-
-        <!-- Facebook Icon -->
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/facebook_BTN"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_facebook"
-            />
 
     </LinearLayout>
 
@@ -157,14 +153,12 @@
         android:id="@+id/guest_entry_BTN"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/login_TEXTVIEW_signup"
+        android:layout_below="@id/auth_options_layout"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/white"
         android:text="@string/enter_as_guest"
         android:textColor="@color/primary_dark_green_background"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
-
-
 
 </RelativeLayout>
