--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="primary_orange"> #FE7833</color>
     <color name="primary_dark_green_background"> #243837</color>
     <color name="secondary_green_background">#2f403f</color>
+    <color name="light_white">#d6d4cb</color>
 </resources>
